--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^18.16.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "@types/styled-components": "^5.1.26",
     "typescript": "^5.0.4"
   }
 }
